--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -7,3 +7,6 @@
       - "-H unix:///var/run/docker.sock"
   roles:
     - role: wunzeco.docker
+  tasks:
+    - name: run this command and ignore the result
+      shell: docker-compose up
