--- a/jjb/Dockerfile
+++ b/jjb/Dockerfile
@@ -1,7 +1,5 @@
 FROM centos:7
-ENV VERSION 1.4.0
-RUN yum -y install epel-release
-RUN yum -y install rubygems python-setuptools python-dev libyaml-dev git curl python-pip python-yaml
+RUN yum -y install epel-release && yum -y install rubygems python-setuptools python-dev libyaml-dev git curl python-pip python-yaml
 RUN pip install pbr PyYAML python-jenkins jenkins-job-builder
 RUN mkdir /opt/puppetci
 COPY data /opt/puppetci
