--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -7,3 +7,8 @@
       - "-H unix:///var/run/docker.sock"
   roles:
     - role: wunzeco.docker
+  tasks:
+    - file:
+        path: /puppetci/etcd
+        state: directory
+        mode: 0755
