Change sinatra container to use centos7 image

--- a/sinatra/Dockerfile
+++ b/sinatra/Dockerfile
@@ -1,14 +1,14 @@
-FROM ruby:2.3.1-slim
-RUN apt-get update -qq && apt-get install -y build-essential
+FROM centos:7
 
+RUN yum -y install rubygems
 ENV APP_ROOT /usr/src/app
 RUN mkdir -p $APP_ROOT
 WORKDIR $APP_ROOT
 COPY Gemfile* $APP_HOME/
 COPY data/ $APP_ROOT/
-RUN bundle install
+RUN gem install bundler && bundle install
 
 # Start server
 ENV PORT 3000
 EXPOSE 3000
-CMD ["ruby", "/usr/src/app/test.rb"]
+CMD ["ruby", "/usr/src/app/app.rb"]
