Update jenkins_job.ini config file

--- a/jjb/data/jenkins_job.ini
+++ b/jjb/data/jenkins_job.ini
@@ -7,5 +7,5 @@ allow_duplicates=False
 [jenkins]
 user=jenkins
 password=1234567890abcdef1234567890abcdef
-url=http://192.168.1.227:8080
+url=http://jenkins:8080
 query_plugins_info=False
