Add code to create jenkins ssh key in Jenkins

--- a/jjb/data/controlrepo.yaml
+++ b/jjb/data/controlrepo.yaml
@@ -8,7 +8,7 @@
         url: rabbitmq
         branches:
         - origin/pr/production
-        credentials-id:
+        credentials-id: jenkinsssh
         browser: auto
     triggers:
     - pollscm:
