--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,3 +1,4 @@
 FROM jenkins
 COPY plugins.txt /usr/share/jenkins/plugins.txt
 RUN /usr/local/bin/plugins.sh /usr/share/jenkins/plugins.txt
+COPY config.xml /usr/share/jenkins/ref/
