Update control repo jenkins job branch to production

--- a/jjb/data/controlrepo.yaml
+++ b/jjb/data/controlrepo.yaml
@@ -7,7 +7,7 @@
     - git:
         url: rabbitmq
         branches:
-        - origin/pr/production
+        - */production
         credentials-id: jenkinsssh
         browser: auto
     triggers:
