Fixed JJB issue building control repo job

--- a/jjb/data/controlrepo.yaml
+++ b/jjb/data/controlrepo.yaml
@@ -7,7 +7,7 @@
     - git:
         url: rabbitmq
         branches:
-        - */production
+        - production
         credentials-id: jenkinsssh
         browser: auto
     triggers:
