Added virtualbox to the appliance

--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -7,6 +7,7 @@
       - "-H unix:///var/run/docker.sock"
   roles:
     - role: wunzeco.docker
+    - role: epiloque.virtualbox
   tasks:
     - file:
         path: /puppetci/etcd
