--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
       - "4001:4001"
     volumes:
       - /puppetci/etcd:/opt/etcd/data
+  gemserver:
+    build: ./gemserver
+    ports: 
+      - "9292:9292"
+    volumes:
+      - /puppetci/gemserver:/gemrepo
   sinatra:
     build: ./sinatra
     deploy:
