Add storage persistence for etcd and jenkins containers

--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -16,3 +16,7 @@
         path: /puppetci/gemserver
         state: directory
         mode: 0755
+    - file:
+        path: /puppetci/jenkins
+        state: directory
+        mode: 0755
