--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -20,3 +20,7 @@
         path: /puppetci/jenkins
         state: directory
         mode: 0755
+    - file:
+        path: /puppetci/nexus
+        state: directory
+        mode: 0755
